Add UI for entering Notion integration token

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -18,4 +18,9 @@
     "js": ["content.js"]
   }],
   "action": { "default_popup": "popup.html" }
+  ,
+  "options_ui": {
+    "page": "register.html",
+    "open_in_tab": true
+  }
 }
