--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -22,5 +22,9 @@
   "options_ui": {
     "page": "register.html",
     "open_in_tab": true
-  }
+  },
+  "web_accessible_resources": [{
+    "resources": ["token.txt"],
+    "matches": ["<all_urls>"]
+  }]
 }
